Added support for dynamic handling of rollup updates by subscribers, as discussed in #297 - by default, RollupSObjectUpdater will simply call Database.update(recordsToUpdate, dmlOptions), but by using RollupPlugin__mdt and an entry with DeveloperName 'RollupSObjectUpdater', allow for things like bypassing trigger handlers on update

--- a/rollup/core/classes/RollupPlugin.cls
+++ b/rollup/core/classes/RollupPlugin.cls
@@ -5,7 +5,7 @@ public without sharing class RollupPlugin {
   private static RollupPluginParameter__mdt parameterMock;
 
   public RollupPlugin__mdt getInstance(String developerNameOrId) {
-    return pluginMocks != null ? pluginMocks[0] : RollupPlugin__mdt.getInstance(developerNameOrId);
+    return pluginMocks != null && pluginMocks.isEmpty() == false ? pluginMocks.remove(0) : RollupPlugin__mdt.getInstance(developerNameOrId);
   }
 
   public List<RollupPlugin__mdt> getInstances() {
