Revert "Removed duplicated call to RollupEvaluator in RollupAsyncProcessor - the same exact one is made, later, in RollupCalculator, so this check was redundant and expensive in regards to CPU time"
This reverts commit d16583a238112af4692dcac81cd5e5ce2955dcbf.

--- a/rollup/core/classes/RollupCalculator.cls
+++ b/rollup/core/classes/RollupCalculator.cls
@@ -154,6 +154,7 @@ public without sharing abstract class RollupCalculator {
       }
     }
     List<SObject> localCalcItems = this.winnowItems(calcItems, oldCalcItems);
+    System.debug(localCalcItems);
     if (this.op.name().contains(Rollup.Op.CONCAT.name()) && this.metadata.RollupOrderBys__r.isEmpty() == false) {
       new RollupFirstLastSorter(Rollup.Op.FIRST, this.metadata.RollupOrderBys__r).sort(localCalcItems);
     }
